# BazelStarterTemplate

./: .bazelrc  .cz.yaml  .gitconfig  .gitignore  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md  WORKSPACE.bzlmod  buildbuddy.yaml  devenv.nix  dir_138aff360eb965c43b94267b8d1ce09e.html  doxygen_crawl.html  index.html  release-please-config.json  tar_paths.txt
.aspect/cli/: config.yaml
.github/PULL_REQUEST_TEMPLATE/: generic.md
.github/workflows/: release-please.yml
benchmark/: BUILD.bazel  benchmark_test.cpp
bzl/: defs.bzl  naming_convention.bzl  variables.bzl
bzl/format/: BUILD.bazel
bzl/lint/: BUILD.bazel  linters.bzl
documentation/: BUILD.bazel  Doxyfile.template  README.md
documentation/_static/: doxygen-awesome-darkmode-toggle.js  doxygen-awesome-fragment-copy-button.js  doxygen-awesome.css  footer.html  header.html
integration/: BUILD.bazel  integration_test.py  requirements_lock_3_12.txt
lib/greeter/: BUILD.bazel
lib/greeter/include/: greeter.h
lib/greeter/src/: greeter.cpp
search/: all_1.js  pages_0.js  searchdata.js
standalone/: BUILD.bazel  main.cpp
test/: BUILD.bazel
test/greeter/: BUILD.bazel
test/greeter/src/: greeter.cpp
test/src/: greeter.cpp
tools/: bazel_stamp_vars.sh  credential-helper  workspace_status.sh
