load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")

exports_files(
    [
        ".clang-tidy",
    ],
    visibility = ["//visibility:public"],
)

alias(
    name = "format",
    actual = "//bzl/format",
)

refresh_compile_commands(
    name = "refresh_all",
    targets = ["//..."],
)
