# We don't actually need an external repo to define Starlark settings. But
# Skylib provides convenience macros that reduce boilerplate, so we'll use that
# here.
#
# See https://bazel.build/extending/config and
# https://github.com/bazelbuild/bazel-skylib) for more info.
load("@bazel_skylib//rules:common_settings.bzl", "string_flag", "int_flag")
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("//:bzl/defs.bzl", "revision_mode")

revision_mode(
    name = "revision_mode",
    build_setting_default = "DIRTY",
)

# The semantic version used to tag the tarball when versioning_mode="Release"
string_flag(
    name = "release_version",
    build_setting_default = "",
)

# The commit-sha used to tag the tarball when versioning_mode="wip"
string_flag(
    name = "commit_sha",
    build_setting_default = "",
)

config_setting(
    name = "is_release",
    flag_values = {
        ":revision_mode": "RELEASE"
    },
)

config_setting(
    name = "is_wip",
    flag_values = {
        ":revision_mode": "WIP"
    },
)

alias(
    name = "format",
    actual = "//bzl/format",
)

refresh_compile_commands(
    name = "refresh_all",
    targets = ["//..."],
)
