load("@doxygen//:doxygen.bzl", "doxygen")
load("@aspect_bazel_lib//lib:expand_template.bzl", "expand_template")
load("//:bzl/variables.bzl", "PROJECT_NAME")

DESCRIPTION = "Example project for doxygen"

doxygen(
    name = "docs",   # Name of the rule, can be anything
    srcs = ["README.md"] + [       # List of sources to document.
        "//lib/greeter:sources",
        "//standalone:sources",
    ] + glob([
        "_static/*",
    ]),
    aliases = [
        "license=@par License:^^",
        "constructor{1}=Construct a new \\1 object.^^",
    ],
    doxyfile_template = ":doxyfile",
    tags = ["manual"]  # Tags to add to the target.
                       # This way the target won't run unless explicitly called
)

expand_template(
    name = "doxyfile",
    out = "doxyfile",
    template = "Doxyfile.template",
    stamp_substitutions = {
        "{{PROJECT_NAME}}": PROJECT_NAME,
        "{{PROJECT_NUMBER}}": "{{STABLE_SEMANTIC_VERSION}}",
        "{{PROJECT_BRIEF}}": DESCRIPTION,
        "{{PROJECT_LOGO}}": "documentation/_static/logo.svg",
        "{{PROJECT_ICON}}": "documentation/_static/logo.svg",
    },
)
