"""Definition of the linter binary

This is in its own package because it has so many loading-time symbols,
we don't want to trigger eager fetches of these for builds that don't want to run format.
"""

load("@aspect_bazel_lib//lib:copy_to_directory.bzl", "copy_to_directory")
load("@aspect_rules_lint//lint:vale_library.bzl", "VALE_STYLES")
load("@bazel_skylib//rules:native_binary.bzl", "native_binary")

package(default_visibility = ["//:__subpackages__"])

native_binary(
    name = "clang_tidy",
    src = select(
        {
            "@bazel_tools//src/conditions:linux_x86_64": "@llvm_toolchain//:clang-tidy",
            "@bazel_tools//src/conditions:linux_aarch64": "@llvm_toolchain//:clang-tidy",
            "@bazel_tools//src/conditions:darwin_x86_64": "@llvm_toolchain//:clang-tidy",
            "@bazel_tools//src/conditions:darwin_arm64": "@llvm_toolchain//:clang-tidy",
        },
    ),
    out = "clang_tidy",
)
