cc_library(
    name = "greeter",
    hdrs = [ "include/greeter.h" ],
    srcs = [ "src/greeter.cpp" ],
    deps = [ "@fmt" ],
    visibility = [ "//visibility:public" ],
)

# Make the files available to doxygen
filegroup(
    name = "sources",
    srcs = glob([
        "include/*.h",
        "src/*.cpp",
    ]),
    visibility = ["//visibility:public"],
)
